--- a/spring-batch-docs/asciidoc/readersAndWriters.adoc
+++ b/spring-batch-docs/asciidoc/readersAndWriters.adoc
@@ -1779,7 +1779,7 @@ individual items. Spring Batch is not tied to any particular JSON library.
 The `JsonItemReader` delegates JSON parsing and binding to implementations of the
 `org.springframework.batch.item.json.JsonObjectReader` interface. This interface
 is intended to be implemented by using a streaming API to read JSON objects
-in chunks. Two libraries are supported:
+in chunks. Two implementations are currently provided:
 
 * link:$$https://github.com/FasterXML/jackson$$[Jackson] through the `org.springframework.batch.item.json.JacksonJsonObjectReader`
 * link:$$https://github.com/google/gson$$[Gson] through the `org.springframework.batch.item.json.GsonJsonObjectReader`
@@ -1797,14 +1797,8 @@ previous JSON resource `org/springframework/batch/item/json/trades.json` and a
 ----
 @Bean
 public JsonItemReader<Trade> jsonItemReader() {
-
-   ObjectMapper objectMapper = new ObjectMapper();
-   // configure the objectMapper as required
-   JacksonJsonObjectReader<Trade> jsonObjectReader = new JacksonJsonObjectReader<>(Trade.class);
-   jsonObjectReader.setMapper(objectMapper);
-
    return new JsonItemReaderBuilder<Trade>()
-                 .jsonObjectReader(jsonObjectReader)
+                 .jsonObjectReader(new JacksonJsonObjectReader<>(Trade.class))
                  .resource(new ClassPathResource("trades.json"))
                  .name("tradeJsonItemReader")
                  .build();
